--- a/week2/three/style.css
+++ b/week2/three/style.css
@@ -1,5 +1,6 @@
 body {
-    background-color: #000000;
-    margin: 0px;
-    overflow: hidden;
-  }
+  width: 100vw;
+  height: 100vh;
+  margin: 0;
+  overflow: hidden;
+}
